# Cmake-Vcpkg-Template

./: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  vcpkg.json
src/Main/: CMakeLists.txt  main.cpp
